Add flags